--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -15,6 +15,8 @@
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
     "@types/react-router-dom": "^5.3.3",
+    "antd": "^5.27.4",
+    "emailjs-com": "^3.2.0",
     "gsap": "^3.13.0",
     "next": "^15.5.4",
     "react": "^19.1.1",
